--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -916,12 +916,21 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p>Aceasta etapa are ca scop validarea problemei si solute identificate.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <h3 class="subTitle">Identificarea problemei</h3>
+          <p>in procesul de dezvoltare a prototipului am luat in considerare feedback-ul UX furnizat de potentialii
+            clienti chestionati, fezabilitatea afacerii si problema identificata pentru a implementa o solutie de baza
+            usor de utilizat pentru orice tip de utilizator.
+            Am avut mai multe sesiuni de feedback cu potentiali utilizatori / clienti si am luat deciziile de
+            proiectare concentrandu-ne pe a face utilizatorii sa se simta confortabil folosind aplicatia noastra.</p>
+          <p>Aplicatia a fost implementata utilizand o arhitectura fara server (utilizand Firebase Cloud Functions and
+            Database) pentru a oferi scalabilitate si o metoda de implementare usoara. Un demo de aplicatie se gaseste
+            <a href="https://book-a-table.github.io/home/" target="_blank">aici</a>.</p>
+          <p>Primul prototip pe care l-am livrat contine urmatoarele caracteristici:</p>
+          <ul>
+            <li>Permite cautarea localului dupa nume</li>
+            <li>Permite filtrarea dupa diferiti factori</li>
+            <li>Permite rezervarea unei mese la o data si ora stabilita</li>
+            <li>Notificarea utilizatorului</li>
+          </ul>
         </div>
       </div>
       <div class="row">
@@ -938,17 +947,12 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p>Aceasta etapa are ca scop validarea problemei si solute identificate.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <h3 class="subTitle">Identificarea problemei</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <p></p>
+          <p>Am vorbit cu mai multe localuri care au saptamanal peste 100 de clienti. Managerii magazinelor au fost de
+            acord sa actualizeze meniul si sa puna la dispozitie orice informatie pentru clientii care vor alege sa
+            vina la local prin intermediul aplicatiei.</p>
+          <p>Cu unele dintre localuri am ajuns la un intelegere cu privire la perioada de proba a aplicatie. Astfel ca
+            daca in 6 luni numarul de clienti care vor folosi aplicatia va ajunge la 30% din clientii lor atunci sunt
+            dispusi sa incheiem un acord, prin care 5% procente din nota de plata va reprezenta venitul nostru.</p>
         </div>
       </div>
     </div>
