--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -916,7 +916,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p>in procesul de dezvoltare a prototipului am luat in considerare feedback-ul UX furnizat de potentialii
+          <p>In procesul de dezvoltare a prototipului am luat in considerare feedback-ul UX furnizat de potentialii
             clienti chestionati, fezabilitatea afacerii si problema identificata pentru a implementa o solutie de baza
             usor de utilizat pentru orice tip de utilizator.
             Am avut mai multe sesiuni de feedback cu potentiali utilizatori / clienti si am luat deciziile de
